--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ body {
     border-radius: 50%;
     background-color: #ddbe86;
     color:#000;
-    padding: 30px 70px 20px 70px;
+    padding: 30px 67px 20px 67px;
     text-align: center;
     border-style: double;
     border-width: 6pt;
@@ -149,8 +149,19 @@ body {
   }
   .list ol {
     text-align: center;
-    padding: 0 30px 30px 90px;
+    padding: 30px 30px 30px 90px;
     font-size: 18px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 500;
+  }
+  .headline_1{
+    text-shadow: greenyellow 3px 3px 0; 
+    font-size: 22px;
+    text-align: center;
+    padding-top: 30px; 
+    font-weight: bold;
+
+  }
+  .headline_1::before{
+    content: "→";
   }
