--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .fixed-container {
-    width: 950px;
+    width: 90%;
     margin: 0 auto;
 }
 
@@ -149,7 +149,7 @@ body {
   }
   .list ol {
     text-align: center;
-    padding: 30px 30px 30px 90px;
+    padding: 5px 30px 10px 90px;
     font-size: 18px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 500;
@@ -172,7 +172,7 @@ body {
 }
 #park_photo {
  position: absolute;
-  padding: 0  60px 20px 0;
+  padding: 0  60px 20px 20px;
 }
 #park span {
   position:absolute;
@@ -183,4 +183,9 @@ body {
   top:0;
   left: 100px;
   z-index:1;
+}
+p{
+ color:#211f1f;
+ 
+
 }
