--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .fixed-container {
-    width: 90%;
+    width: 900px;
     margin: 0 auto;
 }
 
@@ -124,7 +124,9 @@ body {
     opacity: 1;
   }
   #footer{
-    background: red;
+    background:cyan;
+    text-align: center;
+    color:aliceblue;
   }
 
   li:last-child() {
@@ -132,8 +134,8 @@ body {
     background-color: bisque;
   }
   .list{
-    width: 600px;
-    height: 600px;
+    width: 520px;
+    height: 520px;
     border-radius: 50%;
     background-color: #ddbe86;
     color:#000;
@@ -166,7 +168,7 @@ body {
     content: "→";
   }
 .block{
-  width:450px;
+  width:400px;
   padding:10px;
   display:flex;
 }
@@ -186,6 +188,10 @@ body {
 }
 p{
  color:#211f1f;
- 
+ font-weight: 400;
+ text-align: left;
+ padding:3px;
+
+
 
 }
