--- a/style.css
+++ b/style.css
@@ -173,11 +173,16 @@ body {
   display:flex;
 }
 #park_photo {
- position: absolute;
-  padding: 0  60px 20px 20px;
+ position:relative;
+  padding:5px;
+  border: 1px solid black;
+  width:200px;
+  float: left;
+  display:block;
 }
+
 #park span {
-  position:absolute;
+  position: absolute;
   visibility: hidden;
 }
 #park:hover, #park:hover span {
@@ -191,7 +196,5 @@ p{
  font-weight: 400;
  text-align: left;
  padding:3px;
-
-
-
+ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
