--- a/style.css
+++ b/style.css
@@ -30,6 +30,15 @@ div {
 .logo {
     margin: 0;
     padding: 0;
+    font-size: x-large;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 100;
+    background-color: antiquewhite;
+    color:black;
+    width: 350px;
+    text-align: center;
+    height:40px;
+
 }
 .main-menu a {
     padding: 0 5px;
@@ -168,9 +177,10 @@ body {
     content: "→";
   }
 .block{
-  width:400px;
-  padding:10px;
+  width:auto;
+  padding:0;
   display:flex;
+  margin: 0;
 }
 #park_photo {
  position:relative;
@@ -203,3 +213,21 @@ p{
  padding:3px;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+.header {
+  padding:10px;
+  margin:10px;
+  font-weight: 800;
+  font-size: 18px;
+  align-items: center;
+  background-color: #413F3C;
+  color: aliceblue;
+}
+.ad_info {
+  color:white;
+  background-color: red;
+}
+.ad_info2{
+  color:red;
+  background-color: yellow;
+}
+
